Made preview static, fixed spacing

--- a/src/components/metadata/styles/metadata.scss
+++ b/src/components/metadata/styles/metadata.scss
@@ -268,6 +268,7 @@ $list-inline-spacing: 0.2em;
   flex-grow: 1;
   height: 0px;
   margin-top: -1.9em;
+  margin-bottom: 2.5em;
   overflow-y: auto;
 }
 
